freesia/k8s/apps/prom-stack/manifests/remo-exporter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-prod
  name: remo-exporter
  namespace: infra
spec:
  ingressClassName: nginx
  rules:
  - host: remo-exporter.harvestasya.org
    http:
      paths:
      - backend:
          service:
            name: remo-exporter
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - remo-exporter.harvestasya.org
    # secretName: remo-exporter-tls
status:
  loadBalancer: {}
